--- a/app/globals.css
+++ b/app/globals.css
@@ -21,3 +21,11 @@
         text-wrap: balance;
     }
 }
+.hide-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+.hide-scrollbar {
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
+}
